Fix bio text align in the same column, add style when author section has no caricature, fix tags menu on tablets to be displayed in one line

--- a/source/assets/stylesheets/styles/_blog_author.scss
+++ b/source/assets/stylesheets/styles/_blog_author.scss
@@ -23,7 +23,9 @@
 
   @include breakpoint($tablet-breakpoint) {
     margin-left: 40px;
+    margin-top: 50px;
     text-align: center;
+    width: 15%;
   }
 
   @include breakpoint($max-tablet-container) {
@@ -39,18 +41,27 @@
   width: 65%;
 
   @include breakpoint($mobile-font-breakpoint) {
-    margin-left: 110px;
+    margin-left: 130px;
   }
 
   @include breakpoint($tablet-breakpoint) {
-    margin-left: 150px;
+    margin-left: 200px;
     margin-top: 50px;
   }
 
   @include breakpoint($max-tablet-container) {
-    margin-left: 250px;
+    margin-left: 290px;
     margin-top: 50px;
     width: 60%;
+  }
+}
+
+.blog-author__right-section-expanded {
+  margin-left: 30px;
+  width: 80%;
+
+  @include breakpoint($max-tablet-container) {
+    margin-left: 60px;
   }
 }
 
