--- a/source/assets/stylesheets/styles/_blog_header.scss
+++ b/source/assets/stylesheets/styles/_blog_header.scss
@@ -59,8 +59,8 @@
 .blog-header__tag-link {
   @include breakpoint($tablet-breakpoint) {
     display: inline-block;
-    padding-left: 1.1em;
-    padding-right: 1.1em;
+    padding-left: 1em;
+    padding-right: 1em;
 
     span {
       color: $tag-paragraph-color;
